--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
-  image_picker: any
-  path: any
-  path_provider: any
-  sqflite: any
+  image_picker: ^0.8.4+11
+  path:
+  path_provider: ^2.0.9
+  sqflite: ^2.0.2
+  location: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
